--- a/views/admin/admin.jade
+++ b/views/admin/admin.jade
@@ -13,19 +13,19 @@ block content
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/admin/cat') Categories
+                                        a(href='/admin/cat') Categorias
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/admin/products') Products
+                                        a(href='/admin/products') Productos
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/admin/orders') Orders
+                                        a(href='/admin/orders') Pedidos
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/admin/customers') Customers
+                                        a(href='/admin/customers') Usuarios
                     ///nav-bar
 
                 .col-sm-9
