--- a/views/categories.jade
+++ b/views/categories.jade
@@ -5,7 +5,7 @@ block content
         .container
             .row
                 .features_items
-                    h2.title.text-center Product Categories
+                    h2.title.text-center Categoria De Productos
                     if categories
                         each category in categories
                             .col-sm-3
