--- a/views/checkout/delivery.jade
+++ b/views/checkout/delivery.jade
@@ -4,13 +4,13 @@ block content
     section#cart_items
         .container
             .step-one
-                h2.heading Delivery address
+                h2.heading Direccion de Entrega
             .checkout-options
                 h3
-                    i Is the address you'd like to use displayed below?
-                        | If so, click the corresponding "Deliver to this address" button.
+                    i Es la direccion que aparece a continuacion?
+                        | Si es asi haga click en el boton "Entergar en esta direccion".
                         br
-                        | Or you can enter a new address.
+                        | O puede ingresar una nueva direccion.
             .row
                 if addresses
                     each address in addresses
@@ -25,13 +25,13 @@ block content
                             p= 'Tel: ' + address.Phone
 
                             form(action='/checkout/delivery/' + address.AddressID, method='POST')
-                                input.dev-btn.btn.btn-default.add-to-cart(type='submit', value='Deliver to this address')
+                                input.dev-btn.btn.btn-default.add-to-cart(type='submit', value='Entregar a esta Direccion')
             .step-one#new-address
-                h2.heading New delivery address
+                h2.heading Nueva direccion de entrega
 
             .checkout-options
                 h3
-                    i Be sure to click "Ship to this address" when done.
+                    i Asegurese de hacer click en "Enviar a esta Dirección" al finalizar.
 
             .shopper-informations
                 .row
@@ -39,23 +39,23 @@ block content
                         form(action='/checkout/delivery/new', method='POST')
                             .col-sm-1.clearfix
                             .col-sm-5.clearfix
-                                label(for='fullName') Full name
+                                label(for='fullName') Nombre Completo
                                 input(type='text', id='fullName', name='fullName')
                                 br
-                                label(for='streetAddress') Street address
+                                label(for='streetAddress') Direccion
                                 input(type='text', name='streetAddress', id='streetAddress')
                                 br
-                                label(for='postcode') Postal code
+                                label(for='postcode') Codigo Postal
                                 input(type='text', name='postcode', id='postcode')
                                 br
-                                label(for='city') City
+                                label(for='city') Ciudad
                                 input(type='text', name='city', id='city')
                                 br
-                                label(for='country') Country
+                                label(for='country') Provincia
                                 input(type='text', name='country', id='country')
                                 br
-                                label(for='phone') Phone number
+                                label(for='phone') Telefono
                                 input(type='tel', name='phone', id='phone')
                                 br
                                 br
-                                input.dev-btn.btn.btn-default.add-to-cart(type='submit', value='Deliver to this address')
+                                input.dev-btn.btn.btn-default.add-to-cart(type='submit', value='Entregar a esta Direccion')
