--- a/views/contact.jade
+++ b/views/contact.jade
@@ -7,13 +7,13 @@ block content
             .row
                 .col-sm-12
                     h2.title.text-center
-                        | Contact
-                        strong= ' Us'
+                        | Contacto
+                        strong= ' Ar'
                     #gmap.contact-map
             .row
                 .col-sm-8
                     .contact-form
-                        h2.title.text-center Get In Touch
+                        h2.title.text-center Es Bueno estar en Contacto..!!
                         .status.alert.alert-success(style='display: none')
                         form#main-contact-form.contact-form.row(action='/contact-us', method='POST')
                             if customer
@@ -34,16 +34,16 @@ block content
                                 input.btn.btn-primary.pull-right(type='submit', name='submit', value='Submit')
                 .col-sm-4
                     .contact-info
-                        h2.title.text-center Contact Info
+                        h2.title.text-center Informacion De Contacto
                         address
-                            p aStore Inc.
-                            p 6 Vanha maantie
-                            p 02660 Espoo, Finland
-                            p Mobile: +358 58 258 2258
-                            p Fax: +358 58 258 2258
-                            p Email: info@astore.com
+                            p CaravettaSystem.
+                            p Argentina
+                            p Buenos Aires, CABA
+                            p Mobile: 15 6455 3888
+                            p Fax: 4442 4578
+                            p Email: caravettasystem@gmail.com
                         .social-networks
-                            h2.title.text-center Social Networking
+                            h2.title.text-center Redes Sociales
                             ul
                                 li
                                     a(href='#')
