--- a/views/press.jade
+++ b/views/press.jade
@@ -23,7 +23,7 @@ block content
                     .blog-post-area
                         .single-blog-post
                             //h2= title
-                            h3 UNDER CONSTRUCTION
+                            h3 Sitio en Construccion
 
                             //a(href='#')
                                 img(src='#', alt='Image')
