--- a/views/profile/changePassword.jade
+++ b/views/profile/changePassword.jade
@@ -2,13 +2,13 @@ extends info
 
 block details
     form(id='changePassword', action='/usr/' + customer.Username + '/change-password', method='POST')
-        label(for='current-password') Current Password
-        input(type='password', id='current-password', name='currentPassword', placeholder='Password to confirm changes' required=true)
+        label(for='current-password') Contraseña Actual
+        input(type='password', id='current-password', name='currentPassword', placeholder='Contraseña para confirmar los cambios' required=true)
         br
-        label(for='new-password') New Password
+        label(for='new-password') Nueva Contraseña
         input(type='password', id='new-password', name='newPassword', placeholder='New Password' required=true)
         br
-        label(for='confirm-password') Confirm New Password
+        label(for='confirm-password') Confirmar Contraseña
         input(type='password', id='confirm-password', name='repeatPassword', placeholder='Repeat New Password' required=true)
         br
-        button.btn.btn-default(type='submit') Change Password
+        button.btn.btn-default(type='submit') Cambiar Contraseña
