--- a/views/profile/info.jade
+++ b/views/profile/info.jade
@@ -15,15 +15,15 @@ block content
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/usr/' + customer.Username) Personal Info
+                                        a(href='/usr/' + customer.Username) Informacion Personal
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/usr/' + customer.Username + '/orders') Orders
+                                        a(href='/usr/' + customer.Username + '/orders') Pedidos y Estados
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/usr/' + customer.Username + '/addresses') Delivery Addresses
+                                        a(href='/usr/' + customer.Username + '/addresses') Direccion de Entrega
                     ///nav-bar
                 .col-sm-9
                     .blog-post-area
