--- a/views/sign-in.jade
+++ b/views/sign-in.jade
@@ -12,15 +12,15 @@ block content
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/sign-in') Sign in
+                                        a(href='/sign-in') Ingresar
                             .panel.panel-default
                                 .panel-heading
                                     h4.panel-title
-                                        a(href='/sign-up') Sign up
+                                        a(href='/sign-up') Salir
                 .col-sm-4.text-center
                     //login form
                     .login-form
-                        h2 Sign in to your account
+                        h2 Ingrese a su Cuenta
                         if checkOutNoti
                             if (signInError != '')
                                 p=signInError
@@ -38,6 +38,6 @@ block content
                               <input type="checkbox" class="checkbox">
                               Keep me signed in
                               </span>
-                            button.btn.btn-default(type='submit') Login
+                            button.btn.btn-default(type='submit') Ingresar
                     ///login form
     ///form
