--- a/views/admin/addCat.jade
+++ b/views/admin/addCat.jade
@@ -2,14 +2,14 @@ extends admin
 
 block details
     form(id='addCat', action='/admin/cat/add', method='POST')
-        label(for='name') Category Name
+        label(for='name') Nombre de Categoria
         br
         input(type='text', id='name', name='name', placeholder='Category Name', required=true)
         br
-        label(for='description') Description
-        textarea(id='description', name='description', required=true) Category Description
+        label(for='description') Descripcion
+        textarea(id='description', name='description', required=true) Descripcion de Categoria
         br
-        label(for='image') Category Image
+        label(for='image') Imagen de Categoria
         input(type='file', id='image', name='image' required=true)
         br
-        button.dev-btn.btn.btn-default(type='submit') Submit
+        button.dev-btn.btn.btn-default(type='submit') Verificar
