--- a/views/admin/categories.jade
+++ b/views/admin/categories.jade
@@ -18,15 +18,15 @@ block details
                                 form.dev-form(action='/admin/cat/' + category.CategoryID + '/edit', method='GET')
                                     button.btn.btn-default(type='submit')
                                         i.fa.fa-edit
-                                        = ' Edit'
+                                        = ' Editar'
 
                                 form.dev-form(action='/admin/cat/' + category.CategoryID + '/delete', method='POST')
                                     button.btn.btn-default(type='submit')
                                         i.fa.fa-trash-o
-                                        = ' Delete'
+                                        = ' Eliminar'
         form(action='/admin/cat/add', method='GET')
             button.btn.btn-default(type='submit')
                 i.fa.fa-plus
-                = ' Add new category'
+                = ' Agregar Categoria'
         br
         br
