--- a/views/admin/editProduct.jade
+++ b/views/admin/editProduct.jade
@@ -2,12 +2,12 @@ extends admin
 
 block details
     form(id='editProduct', action='/admin/products/' + product.ProductID + '/edit', method='POST')
-        label(for='name') Product Name
+        label(for='name') Nombre del Producto
         br
         input(type='text', id='name', name='name', value=product.ProductName, required=true)
         br
 
-        label(for='category') Category
+        label(for='category') Categoria
         br
         select(id='category', name='category')
             each category in categories
@@ -17,27 +17,27 @@ block details
                     option(value=category.CategoryID)= category.CategoryName
         br
 
-        label(for='price') Product Price
+        label(for='price') Precio del Producto
         br
         input(type='text', id='price', name='price', value=product.ProductPrice, required=true)
         br
 
-        label(for='unit') Units in stock
+        label(for='unit') Unidad en Stock
         br
         input(type='text', id='unit', name='unit', value=product.UnitsInStock, required=true)
         br
 
-        label(for='description') Description
+        label(for='description') Descripcion
         br
         textarea(id='description', name='description', required=true)= product.Description
         br
 
-        label(for='year') Manufacturing Year
+        label(for='year') Fecha de Fabricacion
         br
         input(type='text', id='year', name='year', value=product.ManufactureYear, required=true)
         br
 
-        label(for='image') Product Image
+        label(for='image') Imagen del Producto
         br
         if product.Image
             img.dev-img(src='/img/products/' + product.Image, alt=product.ProductName, width='200px')
@@ -48,8 +48,8 @@ block details
         if product.Feature == false
             - feature = false
         p
-            b Featured Product
-        label(for='featureYes') Yes
+            b Productos Destacados
+        label(for='featureYes') Si
         if feature
             input(type='radio', id='featureYes', name='feature', value=1, checked)
         else
@@ -63,4 +63,4 @@ block details
             input(type='radio', id='featureNo', name='feature', value=0)
         br
 
-        button.cus-btn.btn.btn-default(type='submit') Submit
+        button.cus-btn.btn.btn-default(type='submit') Actualizar
