--- a/views/admin/orders.jade
+++ b/views/admin/orders.jade
@@ -6,8 +6,8 @@ block details
             thead
                 tr
                     td #
-                    td Date
-                    td Status
+                    td Fecha
+                    td Estado
                     td Total
                     td
             tbody
@@ -16,13 +16,13 @@ block details
                         td= order.OrderID
                         td= order.OrderDate
                         td= order.Status
-                        td= order.Total + ' €'
+                        td= order.Total + ' $'
                         td
                             form.dev-form(action='/admin/orders/' + order.OrderID, method='GET')
                                 button.order-btn.btn.btn-default(type='submit')
                                     i.fa.fa-eye
-                                    = ' View'
+                                    = ' Ver'
                             form.dev-form(action='/admin/orders/' + order.OrderID + '/update', method='GET')
                                 button.order-btn.btn.btn-default(type='submit')
                                     i.fa.fa-list
-                                    = ' Update status'
+                                    = ' Actualizar Estado'
