--- a/views/admin/updateOrder.jade
+++ b/views/admin/updateOrder.jade
@@ -3,15 +3,15 @@ extends admin
 block details
     .row
         .col-sm-8
-            h5 Order Information
+            h5 Informacion Del Pedido
                 .table-responsive.cart_info
                     table.table.table-condensed
                         thead
                             tr.cart_menu
                                 td.image
-                                td.description Product
-                                td.price Unit Price
-                                td.quantity Quantity
+                                td.description Producto
+                                td.price Precio Unitario
+                                td.quantity Cantidad
                                 td.total Total
                         tbody
                             each product in products
@@ -29,23 +29,23 @@ block details
                                             a(href=productLink)= name
                                         p= product.Description
                                     td.cart_price
-                                        p= unitPrice + ' €'
+                                        p= unitPrice + ' $'
                                     td.cart_quantity
                                         p=quantity
                                     td.cart_total
-                                        p.cart_total_price= productTotal + ' €'
+                                        p.cart_total_price= productTotal + ' $'
         .col-sm-4
             .table-responsive.cart_info
                 table.table.table-condensed.total-result
                     thead
                         tr.cart_menu
-                            td(colspan=2) Delivery Address
+                            td(colspan=2) Direccion de Entrega
                     tbody
                         tr
-                            td Fullname
+                            td Nombre Completo
                             td= address.FullName
                         tr
-                            td Address
+                            td Direccion
                             td= address.StreetAddress
                         tr
                             td
@@ -59,36 +59,36 @@ block details
 
     .row
         .col-sm-6
-            h3= 'Update Status Order #' + order.OrderID
+            h3= 'Actualizacion Estado del Pedido #' + order.OrderID
             form(id='updateStatus', action='/admin//orders/' + order.OrderID + '/update', method='POST')
                 select(id='status', name='status')
-                    option(value='Order Received', selected) Order Received
-                    option(value='Processing') Processing
-                    option(value='Processed') Processed
-                    option(value='Delivered') Delivered
+                    option(value='Order Received', selected) Pedido Recibido
+                    option(value='Procesando') Procesando
+                    option(value='Procesado') Procesado
+                    option(value='Entregado') Entregado
                 br
-                button.btn.btn-default(type='submit') Submit
+                button.btn.btn-default(type='submit') Verificar
         .col-sm-6
             .table-responsive.cart_info
             table.table.table-condensed.total-result
                 thead
                     tr.cart_menu
-                        td(colspan=2) Order Summary
+                        td(colspan=2) Resumen del Pedido
 
                 tbody
                     tr
                         td Sub Total
-                        td= order.SubTotal + ' €'
+                        td= order.SubTotal + ' $'
                     tr
-                        td Discount
-                        td= order.Discount + ' €'
+                        td Descuento
+                        td= order.Discount + ' $'
                     tr.shipping-cost
-                        td Shipping Cost
+                        td Costo de Envio
                         if order.ShippingFee == 0
                             td Free
                         else
-                            td= order.ShippingFee + ' €'
+                            td= order.ShippingFee + ' $'
                     tr
                         td Total
                         td
-                            span= order.Total + ' €'
+                            span= order.Total + ' $'
