--- a/views/admin/viewOrder.jade
+++ b/views/admin/viewOrder.jade
@@ -7,13 +7,13 @@ block details
                 table.table.table-condensed.total-result
                     thead
                         tr.cart_menu
-                            td(colspan=2) Customer Information
+                            td(colspan=2) Informacion de Usuarios
                     tbody
                         tr
-                            td Fullname
+                            td Nombre Completo
                             td= orderCustomer.FullName
                         tr
-                            td Address
+                            td Direccion
                             td= orderCustomer.StreetAddress
                         tr
                             td
@@ -30,13 +30,13 @@ block details
                 table.table.table-condensed.total-result
                     thead
                         tr.cart_menu
-                            td(colspan=2) Delivery Address
+                            td(colspan=2) Direccion de Entrega
                     tbody
                         tr
-                            td Fullname
+                            td Nombre Completo
                             td= address.FullName
                         tr
-                            td Address
+                            td Direccion
                             td= address.StreetAddress
                         tr
                             td
@@ -49,15 +49,15 @@ block details
                             td= address.Phone
 
     .row
-        h5 Order Information
+        h5 Informacion del Pedido
         .table-responsive.cart_info
             table.table.table-condensed
                 thead
                     tr.cart_menu
                         td.image
-                        td.description Product
-                        td.price Unit Price
-                        td.quantity Quantity
+                        td.description Producto
+                        td.price Precio Unitario
+                        td.quantity Cantidad
                         td.total Total
                 tbody
                     each product in products
@@ -75,11 +75,11 @@ block details
                                     a(href=productLink)= name
                                 p= product.Description
                             td.cart_price
-                                p= unitPrice + ' €'
+                                p= unitPrice + ' $'
                             td.cart_quantity
                                 p=quantity
                             td.cart_total
-                                p.cart_total_price= productTotal + ' €'
+                                p.cart_total_price= productTotal + ' $'
 
                     tr
                         td(colspan='3')
@@ -87,22 +87,22 @@ block details
                             table.table.table-condensed.total-result
                                 thead
                                     tr.cart_menu
-                                        td(colspan=2) Summary
+                                        td(colspan=2) Resumen
 
                                 tbody
                                     tr
                                         td Sub Total
-                                        td= order.SubTotal + ' €'
+                                        td= order.SubTotal + ' $'
                                     tr
-                                        td Discount
-                                        td= order.Discount + ' €'
+                                        td Descuento
+                                        td= order.Discount + ' $'
                                     tr.shipping-cost
-                                        td Shipping Cost
+                                        td Costo de Envio
                                         if order.ShippingFee == 0
                                             td Free
                                         else
-                                            td= order.ShippingFee + ' €'
+                                            td= order.ShippingFee + ' $'
                                     tr
                                         td Total
                                         td
-                                            span= order.Total + ' €'
+                                            span= order.Total + ' $'
