--- a/views/checkout/confirm.jade
+++ b/views/checkout/confirm.jade
@@ -12,9 +12,9 @@ block content
                             thead
                                 tr.cart_menu
                                     td.image
-                                    td.description Product
-                                    td.price Unit Price
-                                    td.quantity Quantity
+                                    td.description Producto
+                                    td.price Precio Unitario
+                                    td.quantity Cantidad
                                     td.total Total
                             tbody
                                 each product in products
@@ -32,25 +32,25 @@ block content
                                                 a(href=productLink)= name
                                             p= product.Description
                                         td.cart_price
-                                            p= unitPrice + ' €'
+                                            p= unitPrice + ' $'
                                         td.cart_quantity
                                             p=quantity
                                         td.cart_total
-                                            p.cart_total_price= productTotal + ' €'
+                                            p.cart_total_price= productTotal + ' $'
 
                 .col-sm-4
                     .table-responsive.cart_info
                         table.table.table-condensed.dev-table
                             thead
                                 tr.cart_menu
-                                    td(colspan=2) Delivery Address
+                                    td(colspan=2) Direccion de Entrga
 
                             tbody
                                 tr
-                                    td Fullname
+                                    td Nombre Completo
                                     td= address.FullName
                                 tr
-                                    td Address
+                                    td Direccion
                                     td= address.StreetAddress
                                 tr
                                     td
@@ -66,24 +66,24 @@ block content
                         table.table.table-condensed.dev-table
                             thead
                                 tr.cart_menu
-                                    td(colspan=2) Summary
+                                    td(colspan=2) Resumen
 
                             tbody
                                 tr
                                     td Sub Total
-                                    td= order.SubTotal + ' €'
+                                    td= order.SubTotal + ' $'
                                 tr
-                                    td Discount
-                                    td= order.Discount + ' €'
+                                    td Descuento
+                                    td= order.Discount + ' $'
                                 tr.shipping-cost
-                                    td Shipping Cost
+                                    td Costo de Envio
                                     if order.ShippingFee == 0
                                         td Free
                                     else
-                                        td= order.ShippingFee + ' €'
+                                        td= order.ShippingFee + ' $'
                                 tr
                                     td Total
                                     td
-                                        span= order.Total + ' €'
+                                        span= order.Total + ' $'
 
     // /#cart_items
