--- a/views/checkout/review.jade
+++ b/views/checkout/review.jade
@@ -4,7 +4,7 @@ block content
     section#cart_items
         .container
             .review-payment
-                h2 Review Order
+                h2 Verificar Pedido
             .row
                 .col-sm-8
                     .table-responsive.cart_info
@@ -12,9 +12,9 @@ block content
                             thead
                                 tr.cart_menu
                                     td.image
-                                    td.description Product
-                                    td.price Unit Price
-                                    td.quantity Quantity
+                                    td.description Producto 
+                                    td.price Precio Unitario
+                                    td.quantity Cantidad
                                     td.total Total
                             tbody
                                 if cart
@@ -34,30 +34,30 @@ block content
                                                         a(href=productLink)= name
                                                     p= item.Description
                                                 td.cart_price
-                                                    p= unitPrice + ' €'
+                                                    p= unitPrice + ' $'
                                                 td.cart_quantity
                                                     p=quantity
                                                 td.cart_total
-                                                    p.cart_total_price= productTotal + ' €'
+                                                    p.cart_total_price= productTotal + ' $'
 
                                     tr
                                         td(colspan='4')
                                         td.cart_quantity
-                                            a.btn.btn-default.update(href='/cart') Edit Cart
+                                            a.btn.btn-default.update(href='/cart') Editar Carro
                 .col-sm-4
                     .table-responsive.cart_info
                         if address
                             table.table.table-condensed.dev-table
                                 thead
                                     tr.cart_menu
-                                        td(colspan=2) Delivery Address
+                                        td(colspan=2) Direccion de Entrega
 
                                 tbody
                                     tr
-                                        td Fullname
+                                        td Nombre Completo
                                         td= address.FullName
                                     tr
-                                        td Address
+                                        td Direccion
                                         td= address.StreetAddress
                                     tr
                                         td
@@ -74,29 +74,29 @@ block content
                             table.table.table-condensed.dev-table
                                 thead
                                     tr.cart_menu
-                                        td(colspan=2) Summary
+                                        td(colspan=2) Resumen
 
                                 tbody
                                     tr
                                         td Sub Total
-                                        td= summary.subTotal + ' €'
+                                        td= summary.subTotal + ' $'
                                     tr
-                                        td Discount
-                                        td= summary.discount + ' €'
+                                        td Descuento
+                                        td= summary.discount + ' $'
                                     tr.shipping-cost
-                                        td Shipping Cost
+                                        td Costo de Envio
                                         if summary.shipCost == 0
                                             td Free
                                         else
-                                            td= summary.shipCost + ' €'
+                                            td= summary.shipCost + ' $'
                                     tr
                                         td Total
                                         td
-                                            span= summary.total + ' €'
+                                            span= summary.total + ' $'
 
                     table.table
                         tr
                             td
                             td(colspan=2).text-right
-                                a.btn.btn-default.check_out(href='/checkout/order') Order
+                                a.btn.btn-default.check_out(href='/checkout/order') Pedido
     // /#cart_items
