--- a/views/profile/orders.jade
+++ b/views/profile/orders.jade
@@ -2,14 +2,14 @@ extends info
 
 block details
 
-    h3 Orders History
+    h3 Historial de Pedidos
     .table-responsive
         table.table.table-condensed
             thead
                 tr
                     td #
-                    td Date
-                    td Status
+                    td Fecha    
+                    td Estado
                     td Total
                     td
             tbody
@@ -18,9 +18,9 @@ block details
                         td= order.OrderID
                         td= order.OrderDate
                         td= order.Status
-                        td= order.Total + ' €'
+                        td= order.Total + ' $'
                         td
                             form(action='/usr/' + customer.Username + '/orders/' + order.OrderID, method='GET')
                                 button.btn.btn-default.order-btn(type='submit')
                                     i.fa.fa-eye
-                                    = ' View'
+                                    = ' Ver'
