--- a/views/profile/profile.jade
+++ b/views/profile/profile.jade
@@ -3,16 +3,16 @@ extends info
 block details
 
     .row
-        h3 Personal Information
+        h3 Informacion Personal
         .col-sm-6
             .table-responsive
                 table.table.table-condensed
                     tbody
                         tr
-                            td Fullname
+                            td Nombre Completo
                             td= customer.FullName
                         tr
-                            td Address
+                            td Direccion
                             td= customer.StreetAddress
                         tr
                             td
@@ -27,17 +27,18 @@ block details
                             td Email
                             td= customer.Email
                         tr
-                            td Username
+                            td Usuario
                             td= customer.Username
     form.dev-form(action='/usr/' + customer.Username + '/edit', method='GET')
         button.btn.btn-default(type='submit')
             i.fa.fa-edit
-            = ' Edit info'
+            = ' Editar Informacion'
 
     form.dev-form(action='/usr/' + customer.Username + '/change-password', method='GET')
         button.btn.btn-default(type='submit')
             i.fa.fa-key
-            = ' Change password'
+            = ' Cambiar Contraseña '
+            
     br
     br
     br
