--- a/views/profile/viewOrder.jade
+++ b/views/profile/viewOrder.jade
@@ -1,89 +1,65 @@
 extends info
 
 block details
-    .review-payment
-        h2= 'Order #' + order.OrderID
-        p= 'Time ordered: ' + order.OrderDate
-    .row
-        .col-sm-8
+    section#cart_items
+        .container
+            .row
+               
             .table-responsive.cart_info
                 table.table.table-condensed
                     thead
                         tr.cart_menu
                             td.image
-                            td.description Product
-                            td.price Unit Price
-                            td.quantity Quantity
+                            td.description Producto
+                            td.price Precio Unitario
+                            td.quantity Cantidad
                             td.total Total
                     tbody
 
                         each product in products
                             -var quantity = product.Quantity;
                             -var name = product.ProductName;
-                            -var productLink = '/cat/' + product.CategorySlug + '/' + product.ProductSlug;
+                            //-var productLink = '/cat/' + product.CategorySlug + '/' + product.ProductSlug;
                             -var unitPrice = product.ProductPrice;
                             -var productTotal = product.Total;
                             tr
                                 td.cart_product
-                                    a(href=productLink)
+                                   // a(href=productLink)
                                         img(src='/img/products/' + product.Image, alt=name)
                                 td.cart_description
                                     h4
                                         a(href=productLink)= name
                                     p= product.Description
                                 td.cart_price
-                                    p= unitPrice + ' €'
+                                    p= unitPrice + ' $'
                                 td.cart_quantity
                                     p=quantity
                                 td.cart_total
-                                    p.cart_total_price= productTotal + ' €'
+                                    p.cart_total_price= productTotal + ' $'
+                                    
 
-        .col-sm-4
-            .table-responsive.cart_info
-                if address
-                    table.table.table-condensed.total-result
-                        thead
-                            tr.cart_menu
-                                td(colspan=2) Delivery Address
 
-                        tbody
-                            tr
-                                td Fullname
-                                td= address.FullName
-                            tr
-                                td Address
-                                td= address.StreetAddress
-                            tr
-                                td
-                                td= address.PostCode + ' ' + address.City
-                            tr
-                                td
-                                td= address.Country
-                            tr
-                                td Tel
-                                td= address.Phone
 
-            .table-responsive.cart_info
-
-                table.table.table-condensed.total-result
+                
                     thead
                         tr.cart_menu
-                            td(colspan=2) Summary
+                            td(colspan=2) Resumen
 
                     tbody
                         tr
                             td Sub Total
-                            td= order.SubTotal + ' €'
+                            td= order.SubTotal + ' $'
                         tr
-                            td Discount
-                            td= order.Discount + ' €'
+                            td Descuento
+                            td= order.Discount + ' $'
                         tr.shipping-cost
-                            td Shipping Cost
+                            td Costo de Envio
                             if order.ShippingFee == 0
                                 td Free
                             else
-                                td= order.ShippingFee + ' €'
+                                td= order.ShippingFee + ' $'
                         tr
                             td Total
                             td
-                                span= order.Total + ' €'
+                                span= order.Total + ' $'
+
